Add specific elements to some sections

--- a/index.html
+++ b/index.html
@@ -2,40 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content=-"IE=edge">
+    <meta name="viewport" content=-"width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <section class="header">
-        <div class="header_navbar">
-            <div class="header_navbar-logo">
-    
+        <div class="header__navbar">
+            <div class="header__navbar--logo">
+                <img src="" alt="">
             </div>
-            <div class="header_navbar-items">
-                <div class="nav"></div>
-                <div class="nav"></div>
-                <div class="nav"></div>
+            <div class="header__navbar--items">
+                <div class="nav">My Projects</div>
+                <div class="nav">Informations</div>
+                <div class="nav">Contact</div>
             </div>
         </div>
-        <div class="header_content">
-            <div class="header_content-text">
-
+        <div class="header__content"->
+            <div class="header__content--side">
+                <h3 class="header__content--side-heading">This is ManhDo's Awesome Stuff</h3>
+                <p class="header__content--side-description">My first portfolio created when i was doing a project from my curriculum.</p>
+                <div class="header__content--side-btn"><a href="">Say Hi with me!</a></div>
             </div>
-            <div class="header_content-img">
-
-            </div>
+           <img src="" alt="manhdo's photo" class="header__content--img">
         </div>
     </section>
     <section class="slider">
-        <div class="slider_projects">
+        <div class="slider__projects">
+            <h3 class="slider__projects--heading">My self-projects</h3>
+            <div class="slider__projects--list">
+                <div class="slider__projects--list-items">
+                    <div class="slider__projects--list-items_img">
+                        <img src="" alt="" class="project__img">
+                    </div>
+                    <p class="slider__projects--list-items_des">Project info: abcdxyz</p>
+                </div>
+                <div class="slider__projects--list-items">
+                    <div class="slider__projects--list-items_img">
+                        <img src="" alt="" class="project__img">
+                    </div>
+                    <p class="slider__projects--list-items_des">Project info: abcdxyz</p>
+                </div>
+                <div class="slider__projects--list-items">
+                    <div class="slider__projects--list-items_img">
+                        <img src="" alt="" class="project__img">
+                    </div>
+                    <p class="slider__projects--list-items_des">Project info: abcdxyz</p>
+                </div>
+                <div class="slider__projects--list-items">
+                    <div class="slider__projects--list-items_img">
+                        <img src="" alt="" class="project__img">
+                    </div>
+                    <p class="slider__projects--list-items_des">Project info: abcdxyz</p>
+                </div>
+            </div>
 
         </div>
-        <div class="slider_info">
+        <div class="slider__info">
 
         </div>
-        <div class="slider_contact">
+        <div class="slider__contact">
 
         </div>
     </section>
