--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content=-"width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
         <div class="header__navbar">
             <div class="header__navbar--logo">
-                <img src="" alt="">
+                <strong>GODSADESER</strong>
             </div>
             <div class="header__navbar--items">
-                <div class="nav">My Projects</div>
-                <div class="nav">Informations</div>
-                <div class="nav">Contact</div>
+                <div class="nav"><a href="">My Projects</a> </div>
+                <div class="nav"><a href="">Informations</a> </div>
+                <div class="nav"><a href="">Contact</a> </div>
             </div>
         </div>
         <div class="header__content"->
@@ -25,7 +28,7 @@
                 <p class="header__content--side-description">My first portfolio created when i was doing a project from my curriculum.</p>
                 <div class="header__content--side-btn"><a href="">Say Hi with me!</a></div>
             </div>
-           <img src="" alt="manhdo's photo" class="header__content--img">
+           <img src="/images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
         </div>
     </section>
     <section class="slider">
