Change text content in header section and project section

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                 <strong>GODSADESER</strong>
             </div>
             <div class="header__navbar--items">
-                <div class="nav"><a href="">My Projects</a> </div>
+                <div class="nav"><a href="">My projects</a> </div>
                 <div class="nav"><a href="">Informations</a> </div>
                 <div class="nav"><a href="">Contact</a> </div>
             </div>
         </div>
         <div class="header__content"->
             <div class="header__content--side">
-                <h3 class="header__content--side-heading">This is ManhDo's Awesome Stuff</h3>
-                <p class="header__content--side-description">My first portfolio created when i was doing a project from my curriculum.</p>
+                <h3 class="header__content--side-heading">This is Manh Do's Awesome Website</h3>
+                <p class="header__content--side-description">Hi, my name is Manh Do, i'm a full-stack web developer from Vietnam.</p>
                 <div class="header__content--side-btn"><a href="">Say Hi with me!</a></div>
             </div>
            <img src="/images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
@@ -33,7 +33,7 @@
     </section>
     <section class="slider">
         <div class="slider__projects">
-            <h3 class="slider__projects--heading">My self-projects</h3>
+            <h3 class="slider__projects--heading">My personal projects</h3>
             <div class="slider__projects--list">
                 <div class="slider__projects--list-items">
                     <div class="slider__projects--list-items_img">
