--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <strong>GODSADESER</strong>
             </div>
             <div class="header__navbar--items">
-                <div class="nav"><a href="">My projects</a> </div>
+                <div class="nav"><a href="">Projects</a> </div>
                 <div class="nav"><a href="">Informations</a> </div>
                 <div class="nav"><a href="">Contact</a> </div>
             </div>
@@ -63,7 +63,7 @@
 
         </div>
         <div class="slider__info">
-
+            
         </div>
         <div class="slider__contact">
 
