Add about section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header__content"->
             <div class="header__content--side">
                 <h3 class="header__content--side-heading">This is Manh Do's Awesome Website</h3>
-                <p class="header__content--side-description">Hi, my name is Manh Do, i'm a full-stack web developer from Vietnam.</p>
+                <p class="header__content--side-description">Hi, my name is Manh Do, i'm a full-stack Web Developer from Vietnam.</p>
                 <div class="header__content--side-btn"><a href="">Say Hi with me!</a></div>
             </div>
            <img src="/images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
@@ -62,8 +62,32 @@
             </div>
 
         </div>
-        <div class="slider__info">
-            
+        <div class="slider__about">
+            <div class="slider__about--heading">
+                <h3 class="slider__about--heading-title">About me</h3>
+                <p class="slider__about--heading-description">My name is Manh Do, aka "godsadeser", you may ask me what it means, but I won't tell you. I started programming in 2022, still got a long journey to go. For more information about me and my skills, just take a look at the section below.</p>
+            </div>
+            <div class="slider__about--skillmap">
+                <div class="slider__about--skillmap-skill">
+                    <a href="" class="skill__name">D E S I G N</a>
+                </div>
+                <div class="slider__about--skillmap-connector"></div>
+                <div class="slider__about--skillmap-skill">
+                    <a href="" class="skill__name">F R O N T - E N D</a>
+                </div>
+                <div class="slider__about--skillmap-connector"></div>
+                <div class="slider__about--skillmap-skill">
+                    <a href="" class="skill__name">B A C K - E N D</a>
+                </div>
+            </div>
+            <div class="slider__about--other">
+                <div class="slider__about--other-text">
+                    Typing speed: 55 WpMs | Git | Github | Command Line
+                </div>
+                <div class="slider__about--other-end">
+                    <h3 class="space">END</h3>
+                </div>
+            </div>
         </div>
         <div class="slider__contact">
 
