Fix header text, add under layer to image

--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
             </div>
             <div class="header__navbar--items">
                 <div class="nav"><a href="">Projects</a> </div>
-                <div class="nav"><a href="">Informations</a> </div>
+                <div class="nav"><a href="">About</a> </div>
                 <div class="nav"><a href="">Contact</a> </div>
             </div>
         </div>
         <div class="header__content"->
             <div class="header__content--side">
-                <h3 class="header__content--side-heading">This is Manh Do's Awesome Website</h3>
-                <p class="header__content--side-description">Hi, my name is Manh Do, i'm a full-stack Web Developer from Vietnam.</p>
+                <h3 class="header__content--side-heading">Full-stack</h3>
+                <h3 class="header__content--side-heading">Web Developer.</h3>
+                <p class="header__content--side-description">Hi, I like to create nice visualized web products with great user experiences. </p>
                 <div class="header__content--side-btn"><a href="">Say Hi with me!</a></div>
             </div>
+            <div class="header__content--img-layer">hello</div>
            <img src="/images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
         </div>
     </section>
