--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="header__content--side-btn"><a href="#contact">Say Hi with me!</a></div>
             </div>
             <div class="header__content--img-layer">hello</div>
-           <img src="/images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
+           <img src="images/me-cropped.jpg" alt="manhdo's photo" class="header__content--img">
         </div>
     </section>
     <section class="slider">
